# 2.2.0 Release
### Shihs

## What's changed?
**Added**
- MrCrayfish's Furniture Mod

**Fixed**
- Fixed screen flickering when looking at players
- Fixed slow world loading
- Fixed rewards for some AE2 quests
   └ "Dense ME Cable", "ME Dual Interface", "ME Storage Bus", "Wireless Terminal" and "Dual P2P Interface" specificly.

**Changed**
- Added reward for "Fluix Crystal" quest
- Removed Deconstruction table
   └ Cry about it
      └ Probably temporarily, until I fix the performance and fairness of this block (did you know that you can disassemble chainmail and get FIRE?)
- Removed Extra Utilities mention in the "Numbers in the Corner?" quest
- Removed "Vanilla changes" quest
- Removed "Farming and Cooking" questline
   └ To be reworked
- Updated "A Feast of Variety" quest
- Reduced spawn rate for aggressive mobs
- Increased spawn rate for passive mobs
- Added "Storage Drawer Keys" quest



[Full Changelog](https://github.com/Nuclear-Tech-New-Horizons/NTNH/compare/2.1.0...2.2.0)

## Download
[GitGub](https://github.com/Nuclear-Tech-New-Horizons/NTNH/releases/tag/2.2.0)