@@ -1,0 +1,8 @@
+{
+  "questIDHigh:4": 8431367155435391423,
+  "questIDLow:4": -5576749125912483375,
+  "sizeX:3": 24,
+  "sizeY:3": 24,
+  "x:3": -240,
+  "y:3": 108
+}
