@@ -24,6 +24,7 @@
 - Reduced spawn rate for aggressive mobs
 - Increased spawn rate for passive mobs
 - Added "Storage Drawer Keys" quest
+- Added "Steel Furnace" quest
 
 
 
